--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@3.0.2/schema.json",
-  "changelog": ["@changesets/changelog-github", { "repo": "illionillion/<repo>" }],
+  "changelog": ["@changesets/changelog-github", { "repo": "illionillion/react-express-bbs" }],
   "commit": false,
   "fixed": [],
   "linked": [],
